# project_CMP1044

./: .gitignore  README.md  pyproject.toml
models/: adaboost_yelpchi_balanced_gs_best.pkl  adaboost_yelpchi_gs_best.pkl  adaboost_yelpnyc_balanced_gs_best.pkl  adaboost_yelpnyc_gs_best.pkl  decisiontree_yelpchi_balanced_gs_best.pkl  decisiontree_yelpchi_gs_best.pkl  decisiontree_yelpnyc_balanced_gs_best.pkl  decisiontree_yelpnyc_gs_best.pkl  gradientboosting_yelpchi_balanced_gs_best.pkl  gradientboosting_yelpnyc_balanced_gs_best.pkl  randomforest_yelpchi_balanced_gs_best.pkl  randomforest_yelpchi_gs_best.pkl  randomforest_yelpnyc_balanced_gs_best.pkl  randomforest_yelpnyc_gs_best.pkl
notebooks/: p1-1_preprocessing_yelpchi.ipynb  p1-2_preprocessing_yelpnyc.ipynb  p2_sentiment_extraction.ipynb  p3_dumping_mongodb.ipynb  p4_data_visualization.ipynb  p6_clustering_model.ipynb  train_test.ipynb
