[tool.poetry]
name = "project_CMP1044"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.1.4"
textblob = "^0.17.1"
ray = {extras = ["data", "default", "serve", "train", "tune"], version = "^2.9.0"}
jupyter = "^1.0.0"
modin = {extras = ["ray"], version = "^0.26.0"}
pillow = "^10.2.0"
py-spy = "^0.3.14"
transformers = "^4.36.2"
torch = "^2.1.2"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.2"
wordcloud = "^1.9.3"
implicit = "^0.7.2"
plotly = "^5.18.0"
seaborn = "^0.13.1"
matplotlib = "^3.8.2"
pymongo = "^4.6.1"
xgboost = "^2.0.3"
plotnine = "^0.12.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
